--- a/doc/数据库设计.md
+++ b/doc/数据库设计.md
@@ -1,9 +1,9 @@
 # 数据库设计说明书<br>
 ## 第一章结构设计<br>
 ### 1.1 数据库ER模型<br>
-!(https://github.com/DYSfu/dys/blob/master/ER.png) <br>
+![ER_img](/doc/img/ER.png) <br>
 ### 1.2 数据库逻辑设计<br>
-!(https://github.com/DYSfu/dys/blob/master/class.png) <br>
+![class_img](/doc/img/class.png) <br>
 ### 1.3 数据库表设计<br>
 1.3.1 user表（用户表)(注：目前仅用于管理人员用户)<br>
 
@@ -23,3 +23,50 @@ team_name | char | 255 | 否 |  | 赛队名，唯一
 team_password | char | 255 | 否 |  | 赛队密码
 team_score | double |  | 是 |  | 赛队分数
 need_check | bool |  | 是 |  | 是否对成绩有异议
+
+1.3.3 task表（试题表)<br>
+
+名称 | 类型 | 长度 | 是否为空 | 主外键 | 备注
+------------ | ------------- | ------------- | ------------- | ------------- | -------------
+task_id | int |  | 否 | 主 | 试题id，唯一标识
+task_name | char | 255 | 否 |  | 试题名，唯一
+task_txt | char | 255 | 否 |  | 试题内容
+task_score | double |  | 是 |  | 试题分数
+need_upload | bool |  | 是 |  | 答题是否需要上传文件
+
+1.3.4 paper表（试卷表)<br>
+
+名称 | 类型 | 长度 | 是否为空 | 主外键 | 备注
+------------ | ------------- | ------------- | ------------- | ------------- | -------------
+paer_id | int |  | 否 | 主 | 试卷id，唯一标识
+paper_name | char | 255 | 否 |  | 试卷名，唯一
+
+1.3.5 paper_task表（试卷试题中间表)<br>
+
+名称 | 类型 | 长度 | 是否为空 | 主外键 | 备注
+------------ | ------------- | ------------- | ------------- | ------------- | -------------
+paper_task_id | int |  | 否 | 主 | 试卷试题id，唯一标识
+task_id | int |  | 否 |  | 试题id
+paper_id | int |  | 否 |  | 试卷id
+
+1.3.6 competition表（比赛表)<br>
+
+名称 | 类型 | 长度 | 是否为空 | 主外键 | 备注
+------------ | ------------- | ------------- | ------------- | ------------- | -------------
+competition_id | int |  | 否 | 主 | 比赛id，唯一标识
+competition_name | char |  | 否 |  | 比赛名，唯一
+competition_start_time | date |  | 是 |  | 比赛开始时间
+competition_end_time | date |  | 是 |  | 比赛结束时间
+
+1.3.6 judge_team_check（裁判审查成绩表)<br>
+
+名称 | 类型 | 长度 | 是否为空 | 主外键 | 备注
+------------ | ------------- | ------------- | ------------- | ------------- | -------------
+judge_team_check_id | int |  | 否 | 主 | id，唯一标识
+user_id | int |  | 否 |  | 裁判id
+team_id | int |  | 否 |  | 赛队id
+task_id | int |  | 否 |  | 试题id
+need_check | bool |  | 是 |  | 是否对成绩有异议
+
+
+
