--- a/doc/数据库设计.md
+++ b/doc/数据库设计.md
@@ -1,6 +1,9 @@
 # 数据库设计说明书<br>
 ## 第一章结构设计<br>
 ### 1.1 数据库ER模型<br>
+在评分测评系统中，划分如下实体：比赛、试卷、试题、小组、出题人、裁判长、核分裁判。
+比赛试卷中存在如下语义关系：一次比赛只有一套试卷，一套试卷只能对应一次比赛；试卷和试题之间语义关系如下：一套试卷多个试题，一个试题只能对应一套试卷；
+试题和小组之间是多对多的关系；核分裁判和小组之间多对多；裁判和小组以及裁判和核分裁判都是一对多的关系；出题人和小组的关系是一对多。
 ![ER_img](/doc/img/ER.png) <br>
 ### 1.2 数据库逻辑设计<br>
 ![data_img](/doc/img/数据库逻辑设计.png) <br>
